// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests for Body component should render Body component correctly 1`] = `
<div
  className="Body"
>
  <div
    className="StorageSelector"
  >
    <ul
      className="StorageSelector"
    >
      <li
        className="StorageSelector"
      >
        <button
          className="Block"
          onClick={[Function]}
        >
          <p
            className=""
          >
            Basement
          </p>
        </button>
        <button
          className="Round"
          onClick={[Function]}
        >
          i
        </button>
      </li>
      <li
        className="StorageSelectorActive"
      >
        <button
          className="Block"
          onClick={[Function]}
        >
          <p
            className="Active"
          >
            Fridge
          </p>
        </button>
        <button
          className="Round"
          onClick={[Function]}
        >
          i
        </button>
      </li>
      <li
        className="StorageSelector"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            className="StorageSelector"
            onChange={[Function]}
            type="text"
            value=""
          />
          <input
            className="StorageSelector"
            disabled={true}
            type="submit"
            value="Add"
          />
        </form>
      </li>
    </ul>
    <div
      className="modal hide"
    >
      <div
        className="modal-main"
      >
        <span
          className="close"
          onClick={[Function]}
        >
          ×
        </span>
        <h1>
          Settings for 
          storage
           "
          Fridge
          ".
        </h1>
        <h2>
          Update name
        </h2>
        <form
          className="Modal"
          onSubmit={[Function]}
        >
          <input
            className="Modal"
            onChange={[Function]}
            type="text"
            value=""
          />
          <br />
          <input
            className="Modal"
            disabled={false}
            type="submit"
            value="Update name"
          />
        </form>
        <h2>
          Delete 
          storage
        </h2>
        <p>
          To delete the storage and all its content, click the button below. Items and units are not deleted.
        </p>
        <button
          className="Modal"
          onClick={[Function]}
        >
          Delete 
          storage
        </button>
      </div>
    </div>
  </div>
  <div
    className="StorageView"
  >
    <table
      className="StorageView"
    >
      <thead>
        <tr>
          <th>
            Name
          </th>
          <th>
            Unit
          </th>
          <th>
            Entity
          </th>
          <th>
            Options
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Milk
          </td>
          <td>
            1L
          </td>
          <td>
            2.7
          </td>
          <td>
            <button
              className="StorageView"
              onClick={[Function]}
            >
              -
            </button>
            <button
              className="StorageView"
              onClick={[Function]}
            >
              +
            </button>
            <button
              className="StorageView"
              onClick={[Function]}
            >
              Edit
            </button>
            <button
              className="StorageView"
              onClick={[Function]}
            >
              Remove
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Sparkling water
          </td>
          <td>
            0.75L
          </td>
          <td>
            21
          </td>
          <td>
            <button
              className="StorageView"
              onClick={[Function]}
            >
              -
            </button>
            <button
              className="StorageView"
              onClick={[Function]}
            >
              +
            </button>
            <button
              className="StorageView"
              onClick={[Function]}
            >
              Edit
            </button>
            <button
              className="StorageView"
              onClick={[Function]}
            >
              Remove
            </button>
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr>
          <td>
            <select
              id="Item"
              name="Item"
              onChange={[Function]}
            >
              <option
                value={0}
              >
                Sparkling water
              </option>
              <option
                value={1}
              >
                Apple juice
              </option>
              <option
                value={3}
              >
                Milk
              </option>
            </select>
          </td>
          <td>
            <select
              id="Unit"
              name="Unit"
              onChange={[Function]}
            >
              <option
                value={1}
              >
                0.5L
              </option>
              <option
                value={2}
              >
                0.75L
              </option>
              <option
                value={3}
              >
                1.0L
              </option>
            </select>
          </td>
          <td>
            <input
              min="0"
              onChange={[Function]}
              type="number"
              value={0}
            />
          </td>
          <td>
            <button
              disabled={false}
              onClick={[Function]}
            >
              Add
            </button>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`snapshot tests for Header component should render Header component correctly 1`] = `
<div
  className="Header"
>
  <button
    className="Header"
    onClick={[Function]}
  >
    Settings
  </button>
  <button
    className="Header"
    onClick={[Function]}
  >
    Units
  </button>
  <button
    className="Header"
    onClick={[Function]}
  >
    Items
  </button>
  <h1
    className="Header"
  >
    SemiSmartStorage
  </h1>
  <div
    className="modal hide"
  >
    <div
      className="modal-main"
    >
      <span
        className="close"
        onClick={[Function]}
      >
        ×
      </span>
      <h1>
        Settings for 
        item
      </h1>
      <p>
        Click the edit-button next to the 
        item
         you want to edit and perform your changes.
      </p>
      <ul
        className="Modal"
      >
        <li
          className="Modal"
        >
          <button
            className="Block"
          >
            <p>
              Sparkling water
            </p>
          </button>
          <button
            className="Round"
            onClick={[Function]}
          >
            i
          </button>
        </li>
        <li
          className="Modal"
        >
          <button
            className="Block"
          >
            <p>
              Apple juice
            </p>
          </button>
          <button
            className="Round"
            onClick={[Function]}
          >
            i
          </button>
        </li>
        <li
          className="Modal"
        >
          <button
            className="Block"
          >
            <p>
              Milk
            </p>
          </button>
          <button
            className="Round"
            onClick={[Function]}
          >
            i
          </button>
        </li>
        <li
          className="Modal"
        >
          <form
            onSubmit={[Function]}
          >
            <input
              className="ModalList"
              onChange={[Function]}
              type="text"
              value=""
            />
            <input
              className="ModalList"
              disabled={true}
              type="submit"
              value="Add"
            />
          </form>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="modal hide"
  >
    <div
      className="modal-main"
    >
      <span
        className="close"
        onClick={[Function]}
      >
        ×
      </span>
      <h1>
        Settings for 
        unit
      </h1>
      <p>
        Click the edit-button next to the 
        unit
         you want to edit and perform your changes.
      </p>
      <ul
        className="Modal"
      >
        <li
          className="Modal"
        >
          <button
            className="Block"
          >
            <p>
              0.5L
            </p>
          </button>
          <button
            className="Round"
            onClick={[Function]}
          >
            i
          </button>
        </li>
        <li
          className="Modal"
        >
          <button
            className="Block"
          >
            <p>
              0.75L
            </p>
          </button>
          <button
            className="Round"
            onClick={[Function]}
          >
            i
          </button>
        </li>
        <li
          className="Modal"
        >
          <button
            className="Block"
          >
            <p>
              1.0L
            </p>
          </button>
          <button
            className="Round"
            onClick={[Function]}
          >
            i
          </button>
        </li>
        <li
          className="Modal"
        >
          <form
            onSubmit={[Function]}
          >
            <input
              className="ModalList"
              onChange={[Function]}
              type="text"
              value=""
            />
            <input
              className="ModalList"
              disabled={true}
              type="submit"
              value="Add"
            />
          </form>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="modal hide"
  >
    <div
      className="modal-main"
    >
      <span
        className="close"
        onClick={[Function]}
      >
        ×
      </span>
      <h1>
        Settings
      </h1>
      <p>
        Settings may be added later.
      </p>
    </div>
  </div>
  <div
    className="modal hide"
  >
    <div
      className="modal-main"
    >
      <span
        className="close"
        onClick={[Function]}
      >
        ×
      </span>
      <h1>
        Settings for 
        item
         "
        
        ".
      </h1>
      <h2>
        Update name
      </h2>
      <form
        className="Modal"
        onSubmit={[Function]}
      >
        <input
          className="Modal"
          onChange={[Function]}
          type="text"
          value=""
        />
        <br />
        <input
          className="Modal"
          disabled={true}
          type="submit"
          value="Update name"
        />
      </form>
      <h2>
        Delete 
        item
      </h2>
      <p>
        To delete the item, click the button below. All occurances in every storage will be deleted, too.
      </p>
      <button
        className="Modal"
        onClick={[Function]}
      >
        Delete 
        item
      </button>
    </div>
  </div>
</div>
`;
